// Copyright 2021-2022 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax="proto3";

package examples;

// A service that provides several methods, some of which
// are intended for the browser, but some are not.
service MyService {

  // GetFoo echoes the request. It is *not* intended for the browser,
  // and ideally, we don't generate any client-side code for it.
  rpc GetFoo(FooRequest) returns (FooResponse) {};

  // GetBar echoes the request. It is intended for the browser.
  rpc GetBar(BarRequest) returns (BarResponse) {};
}

message FooRequest {
  string foo = 1;
}

message FooResponse {
  string foo = 1;
}

message BarRequest {
  string bar = 1;
}

message BarResponse {
  string bar = 1;
}
